ags (3.7.44)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_lv2_plugin_atom_sequence_remove_midi()
	* fixed ags_fx_eq10_audio_signal_real_run_inter()
	* fixed ags_eq10_audio_signal_real_run_inter()

ags (3.7.43)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added Polish translation

ags (3.7.42)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unitialized buffer of AgsFxPeakChannel recall

ags (3.7.41)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated test artifacts
	* fixed use after free of GList of soundcards in ags_add_soundcard.c task
	* fixed ref-count in AgsAudioApplicationContext and AgsXorgApplicationContext of setters of GList
	* fixed ref-count in AgsOscFrontController
	* fixed ags_osc_connection_read_bytes() might be uninitialized error
	* fixed ags_osc_connection_read_bytes() error might leak
	* fixed ags_osc_client_read_bytes() might be uninitialized error
	* fixed ags_osc_client_read_bytes() use after free

ags (3.7.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_audio_open_audio_file_as_channel()
	* fixed missing files in tarball to run valgrind make targets

ags (3.7.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed use after free of GList of soundcards in ags_remove_soundcard.c task
	* fixed wrong reference counter in ags_recycling_position()
	* minor improvements

ags (3.7.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_notation_to_raw_midi()
	* implemented ags_notation_from_raw_midi()
	* added ags/test/audio/midi/ags_midi_delta_time.c
	* fixed typo in AgsRecall:automation-port property
	* fixed libags.pc old include of ags/config.h
	* fixed libags_audio.pc missing gstreamer dependencies

ags (3.7.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsServer missing HTTP status code 403 Forbidden and response

ags (3.7.36)
