@@ -1,6 +1,7 @@
 ags (3.7.44)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV with AgsPluginBrowser no plugin selected
 	* fixed ags_lv2_plugin_atom_sequence_remove_midi()
 	* fixed ags_fx_eq10_audio_signal_real_run_inter()
 	* fixed ags_eq10_audio_signal_real_run_inter()
